--- a/train.ipynb
+++ b/train.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import torchvision.models as models\n",
+    "import os\n",
+    "import xml.etree.ElementTree as ET\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torchvision.transforms as transforms\n",
+    "from PIL import Image"
    ]
   },
   {
@@ -15,8 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torchvision.models as models\n",
-    "\n",
+    "# Training for the classification model\n",
     "# 加载预训练的 ResNet50 模型\n",
     "resnet50 = models.resnet50(weights='IMAGENET1K_V2')"
    ]
@@ -27,8 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import xml.etree.ElementTree as ET\n",
     "def parse_xml(xml_file):\n",
     "    tree = ET.parse(xml_file)\n",
     "    root = tree.getroot()\n",
@@ -86,9 +89,6 @@
    ],
    "source": [
     "# label string to integer mapping\n",
-    "import os\n",
-    "import xml.etree.ElementTree as ET\n",
-    "\n",
     "def collect_labels(xml_dir):\n",
     "    labels = set()\n",
     "    for xml_file in os.listdir(xml_dir):\n",
@@ -114,10 +114,6 @@
    "outputs": [],
    "source": [
     "# the dataset class\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import torchvision.transforms as transforms\n",
-    "from PIL import Image\n",
-    "\n",
     "class CoinDataset(Dataset):\n",
     "    def __init__(self, root_dir, transform=None):\n",
     "        # temp root = data/temp_train\n",
