--- a/train.ipynb
+++ b/train.ipynb
@@ -55,11 +55,11 @@
     {
      "data": {
       "text/plain": [
-       "[('5CHF', (1726, 1654, 2486, 2468)),\n",
-       " ('0.02EUR', (1919, 2978, 2433, 3551)),\n",
-       " ('0.02EUR', (2569, 2361, 3143, 2918)),\n",
-       " ('0.05EUR', (3079, 2904, 3759, 3471)),\n",
-       " ('2EUR', (3069, 1364, 3676, 1994))]"
+       "[('5CHF', (1588, 1605, 2511, 2516)),\n",
+       " ('2EUR', (3011, 1311, 3774, 2079)),\n",
+       " ('0.2EUR', (2574, 2342, 3158, 2932)),\n",
+       " ('0.5EUR', (3132, 2884, 3716, 3474)),\n",
+       " ('0.2EUR', (1868, 2963, 2505, 3532))]"
       ]
      },
      "execution_count": 4,
@@ -69,7 +69,7 @@
    ],
    "source": [
     "# Looking at one parsed XML file\n",
-    "xml_file = os.path.join('data', 'temp_train_annotations',  'L1010277.xml')\n",
+    "xml_file = os.path.join('data', 'train',  'L1010277.xml')\n",
     "res = parse_xml(xml_file)\n",
     "res"
    ]
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'0.05EUR': 0, '1EUR': 1, '0.1CHF': 2, '2CHF': 3, '5CHF': 4, '0.2EUR': 5, '1CHF': 6, '0.5CHF': 7, '0.05CHF': 8, '0.1EUR': 9, '0.5EUR': 10, '2EUR': 11, '0.2CHF': 12, '0.01EUR': 13, '0.02EUR': 14}\n"
+      "{'2EUR': 0, '0.1EUR': 1, '0.2CHF': 2, 'OOD': 3, '0.2EUR': 4, '0.05CHF': 5, '0.1CHF': 6, '0.5CHF': 7, '1CHF': 8, '5CHF': 9, '2CHF': 10, '1EUR': 11, '0.01EUR': 12, '0.05EUR': 13, '0.5EUR': 14, '0.02EUR': 15}\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
     "    return labels\n",
     "\n",
     "# 创建标签到索引的映射\n",
-    "label_set = collect_labels(os.path.join('data', 'temp_train_annotations'))\n",
+    "label_set = collect_labels(os.path.join('data', 'train'))\n",
     "label_to_index = {label: idx for idx, label in enumerate(label_set)}\n",
     "\n",
     "# 示例：显示映射\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,57 +153,12 @@
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "])\n",
     "\n",
-    "dataset = CoinDataset(root_dir=os.path.join('data', 'temp_train'), transform=transform)\n"
+    "dataset = CoinDataset(root_dir=os.path.join('data', 'train'), transform=transform)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[1.4612, 1.4440, 1.4612,  ..., 1.4269, 1.4098, 1.3927],\n",
-       "         [1.4440, 1.4612, 1.4612,  ..., 1.4269, 1.3927, 1.3755],\n",
-       "         [1.4612, 1.4440, 1.4612,  ..., 1.4269, 1.4269, 1.3584],\n",
-       "         ...,\n",
-       "         [1.4440, 1.4269, 1.4269,  ..., 1.4440, 1.4440, 1.4269],\n",
-       "         [1.4269, 1.4269, 1.4269,  ..., 1.4269, 1.4269, 1.4440],\n",
-       "         [1.4098, 1.4098, 1.4269,  ..., 1.4269, 1.4440, 1.4612]],\n",
-       "\n",
-       "        [[1.5532, 1.5357, 1.5532,  ..., 1.5532, 1.5532, 1.5357],\n",
-       "         [1.5357, 1.5532, 1.5532,  ..., 1.5532, 1.5357, 1.5182],\n",
-       "         [1.5532, 1.5357, 1.5532,  ..., 1.5707, 1.5707, 1.5182],\n",
-       "         ...,\n",
-       "         [1.4832, 1.4657, 1.4657,  ..., 1.5357, 1.5357, 1.5182],\n",
-       "         [1.4832, 1.4657, 1.4657,  ..., 1.5182, 1.5182, 1.5357],\n",
-       "         [1.4832, 1.4657, 1.4657,  ..., 1.5182, 1.5357, 1.5532]],\n",
-       "\n",
-       "        [[1.7163, 1.6988, 1.7163,  ..., 1.7337, 1.6988, 1.6814],\n",
-       "         [1.6988, 1.7163, 1.7163,  ..., 1.7163, 1.6988, 1.6640],\n",
-       "         [1.7163, 1.6988, 1.7163,  ..., 1.7163, 1.7163, 1.6640],\n",
-       "         ...,\n",
-       "         [1.5594, 1.5420, 1.5420,  ..., 1.6988, 1.6988, 1.6814],\n",
-       "         [1.5594, 1.5420, 1.5420,  ..., 1.6814, 1.6814, 1.6988],\n",
-       "         [1.5420, 1.5420, 1.5420,  ..., 1.6814, 1.6988, 1.7163]]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(dataset[0]) # a list of tuples, each tuple represents a coin and its value\n",
-    "len(dataset[0])\n",
-    "type(dataset[0][0])\n",
-    "dataset[0][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,12 +178,28 @@
     "    return images, labels\n",
     "\n",
     "\n",
-    "data_loader = DataLoader(dataset, batch_size=8, shuffle=True, collate_fn=collate_fn)"
+    "import numpy as np\n",
+    "from torch.utils.data import Subset\n",
+    "def train_val_split(dataset, val_split=0.2):\n",
+    "    indices = np.arange(len(dataset))\n",
+    "    np.random.shuffle(indices)\n",
+    "    split = int(np.floor(val_split * len(indices)))\n",
+    "    train_indices, val_indices = indices[split:], indices[:split]\n",
+    "    \n",
+    "    train_dataset = Subset(dataset, train_indices)\n",
+    "    val_dataset = Subset(dataset, val_indices)\n",
+    "    \n",
+    "    return train_dataset, val_dataset\n",
+    "\n",
+    "\n",
+    "train_dataset, val_dataset = train_val_split(dataset, val_split=0.1)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True, collate_fn=collate_fn)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=16, shuffle=False, collate_fn=collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +208,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,25 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\Anaconda\\envs\\iapr\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "e:\\Anaconda\\envs\\iapr\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torchvision.models as models\n",
     "\n",
     "# 加载预训练的 ResNet50 模型\n",
-    "model = models.resnet50(pretrained=True)\n",
+    "model = models.resnet50(weights='IMAGENET1K_V2')\n",
     "\n",
     "# 修改最后一个全连接层以匹配硬币分类的类别数\n",
     "num_classes = len(label_to_index)  # 假设你已经有了标签索引\n",
@@ -278,80 +238,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, data_loader, criterion, optimizer, num_epochs=5):\n",
-    "    model.train()  # 将模型设置为训练模式\n",
-    "    for epoch in range(num_epochs):\n",
-    "        running_loss = 0.0\n",
+    "def validate_model(model, data_loader, criterion):\n",
+    "    model.eval()\n",
+    "    val_loss = 0.0\n",
+    "    with torch.no_grad():\n",
     "        for images, labels in data_loader:\n",
     "            images, labels = images.to(device), labels.to(device)\n",
-    "            \n",
-    "            # 清除之前的梯度\n",
-    "            optimizer.zero_grad()\n",
-    "            \n",
-    "            # 正向传播\n",
     "            outputs = model(images)\n",
-    "            \n",
-    "            # 计算损失\n",
     "            loss = criterion(outputs, labels)\n",
-    "            \n",
-    "            # 反向传播\n",
+    "            val_loss += loss.item()\n",
+    "    return val_loss / len(data_loader)\n",
+    "\n",
+    "\n",
+    "def train_model(model, train_loader, val_loader, criterion, optimizer, num_epochs=5):\n",
+    "    best_val_loss = float('inf')\n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train()\n",
+    "        running_loss = 0.0\n",
+    "        for images, labels in train_loader:\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(images)\n",
+    "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
-    "            \n",
-    "            # 优化器步骤\n",
     "            optimizer.step()\n",
-    "            \n",
-    "            # 累加损失\n",
     "            running_loss += loss.item()\n",
     "        \n",
-    "        # 打印每个epoch的损失\n",
-    "        print(f'Epoch {epoch+1}, Loss: {running_loss/len(data_loader)}')\n"
+    "        # 计算验证损失\n",
+    "        val_loss = validate_model(model, val_loader, criterion)\n",
+    "        print(f'Epoch {epoch+1}, Loss: {running_loss/len(train_loader)}, Validation Loss: {val_loss}')\n",
+    "        \n",
+    "        # 检查是否有最佳模型，并保存\n",
+    "        if val_loss < best_val_loss:\n",
+    "            best_val_loss = val_loss\n",
+    "            torch.save(model.state_dict(), 'best_model.pth')\n",
+    "            print(f\"Saved better model with validation loss: {val_loss}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 2.6721158027648926\n",
-      "Epoch 2, Loss: 1.2421990036964417\n",
-      "Epoch 3, Loss: 0.6557349562644958\n",
-      "Epoch 4, Loss: 0.31325186789035797\n",
-      "Epoch 5, Loss: 0.16929294541478157\n"
+      "Epoch 1, Loss: 2.740930271148682, Validation Loss: 2.7348225116729736\n",
+      "Saved better model with validation loss: 2.7348225116729736\n",
+      "Epoch 2, Loss: 2.39723653793335, Validation Loss: 2.633789539337158\n",
+      "Saved better model with validation loss: 2.633789539337158\n",
+      "Epoch 3, Loss: 2.0391609191894533, Validation Loss: 2.408545732498169\n",
+      "Saved better model with validation loss: 2.408545732498169\n",
+      "Epoch 4, Loss: 1.6688083171844483, Validation Loss: 2.1467816829681396\n",
+      "Saved better model with validation loss: 2.1467816829681396\n",
+      "Epoch 5, Loss: 1.3558610200881958, Validation Loss: 1.8719234466552734\n",
+      "Saved better model with validation loss: 1.8719234466552734\n",
+      "Epoch 6, Loss: 1.049644160270691, Validation Loss: 1.673026204109192\n",
+      "Saved better model with validation loss: 1.673026204109192\n",
+      "Epoch 7, Loss: 0.7817895650863648, Validation Loss: 1.4931954145431519\n",
+      "Saved better model with validation loss: 1.4931954145431519\n",
+      "Epoch 8, Loss: 0.5447116613388061, Validation Loss: 1.3262101411819458\n",
+      "Saved better model with validation loss: 1.3262101411819458\n",
+      "Epoch 9, Loss: 0.37195721864700315, Validation Loss: 1.2384984493255615\n",
+      "Saved better model with validation loss: 1.2384984493255615\n",
+      "Epoch 10, Loss: 0.25723162591457366, Validation Loss: 1.1847167015075684\n",
+      "Saved better model with validation loss: 1.1847167015075684\n",
+      "Epoch 11, Loss: 0.169619420170784, Validation Loss: 1.122215747833252\n",
+      "Saved better model with validation loss: 1.122215747833252\n",
+      "Epoch 12, Loss: 0.10901663675904275, Validation Loss: 1.07761812210083\n",
+      "Saved better model with validation loss: 1.07761812210083\n",
+      "Epoch 13, Loss: 0.07248848006129265, Validation Loss: 1.0564203262329102\n",
+      "Saved better model with validation loss: 1.0564203262329102\n",
+      "Epoch 14, Loss: 0.04284987524151802, Validation Loss: 1.0314831733703613\n",
+      "Saved better model with validation loss: 1.0314831733703613\n",
+      "Epoch 15, Loss: 0.034639110788702965, Validation Loss: 1.015237808227539\n",
+      "Saved better model with validation loss: 1.015237808227539\n"
      ]
     }
    ],
    "source": [
-    "train_model(model, data_loader, criterion, optimizer, num_epochs=5)\n"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# 现在开始训练\n",
+    "train_model(model, train_loader, val_loader, criterion, optimizer, num_epochs=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: 2CHF, Probability: 0.44478124380111694\n"
+      "Epoch 1, Loss: 0.02251990996301174, Validation Loss: 0.9925457835197449\n",
+      "Saved better model with validation loss: 0.9925457835197449\n",
+      "Epoch 2, Loss: 0.0176901800557971, Validation Loss: 0.9894407987594604\n",
+      "Saved better model with validation loss: 0.9894407987594604\n",
+      "Epoch 3, Loss: 0.016770420409739018, Validation Loss: 1.0101858377456665\n",
+      "Epoch 4, Loss: 0.018623148463666438, Validation Loss: 1.0089820623397827\n",
+      "Epoch 5, Loss: 0.008884755708277226, Validation Loss: 1.024297833442688\n",
+      "Epoch 6, Loss: 0.009139344561845064, Validation Loss: 1.0353553295135498\n",
+      "Epoch 7, Loss: 0.007786692492663861, Validation Loss: 1.0406599044799805\n",
+      "Epoch 8, Loss: 0.0076099943369627, Validation Loss: 1.0470120906829834\n",
+      "Epoch 9, Loss: 0.006128749437630176, Validation Loss: 1.0534926652908325\n",
+      "Epoch 10, Loss: 0.006275934912264347, Validation Loss: 1.0614908933639526\n"
+     ]
+    }
+   ],
+   "source": [
+    "# do more trainings, as we haven't seen overfitting yet\n",
+    "\n",
+    "# load model\n",
+    "model.load_state_dict(torch.load('best_model.pth'))\n",
+    "model = model.to(device)\n",
+    "train_model(model, train_loader, val_loader, criterion, optimizer, num_epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the label to index mapping\n",
+    "import json\n",
+    "with open('label_to_index.json', 'w') as f:\n",
+    "    json.dump(label_to_index, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 5CHF, Probability: 0.9047756791114807\n"
      ]
     }
    ],
