--- a/classify.ipynb
+++ b/classify.ipynb
@@ -1,6 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Author:**\n",
+    "\n",
+    "Haolong Li (haolong.li@epfl.ch) (352680)\n",
+    "\n",
+    "Zhibo Zhao (zhibo.zhao@epfl.ch) (350593)\n",
+    "\n",
+    "# Project Outline\n",
+    "\n",
+    "In this project we created a coin detection model. For an image containing mutiple coins of different types and values, the model first segments the image to obtain subfigures of separate coins, then each coin figure is fed to a single coin classification model for classification. We finally integrate the results from the subfigures from one image to get the detection result of the image.\n",
+    "\n",
+    "## Segmentation\n",
+    "In general this step contains:\n",
+    "- Thresholding;\n",
+    "- Applying Mathematical Morphology;\n",
+    "- Detecting contours from the previous result;\n",
+    "- Identifying circualr contour shapes and append to the result.\n",
+    "  \n",
+    "There are 3 kinds of images: neutral, noisy, hand. For each kind of image, we try 2 different threholding + morphology strategies:\n",
+    "- **neutral bg + rgb thresholding**: \n",
+    "  - Thresholding: lower bound (rgb) = 0, 0, 0; upper bound (rgb) = 150, 175, 175; \n",
+    "  - Apply 2 closings (kernel size = 25\\*25, 30\\*30)\n",
+    "- **noisy bg + rgb thresholding**:\n",
+    "  - Thresholding: lower bound (rgb) = 0, 0, 0; upper bound (rgb) = 185, 180, 160; \n",
+    "  - Apply 1 closing (kernel size = 11\\*11)\n",
+    "- **hand bg + rgb thresholding**:\n",
+    "  - Thresholding: lower bound (rgb) = 0, 0, 0; upper bound (rgb) = 175, 175, 150; \n",
+    "  - Apply 2 closings (kernel size = 30\\*30, 35\\*35)\n",
+    "- **adaptive thresholding**\n",
+    "  - Convert image to gray scale;\n",
+    "  - Apply Gaussian blurring (kernel size = 11*11)\n",
+    "  - Apply adaptive thresholding (see params in code)\n",
+    "  - Apply closing:\n",
+    "    - neutral bg: kernel size = 11;\n",
+    "    - noisy bg: kernel size = 20;\n",
+    "    - hand bg: kernel size = 9.\n",
+    "\n",
+    "After applying thresholding + morphology, we proceed to the contour stage.\n",
+    "For the contours identfied, we filter out those who size deviates far away from its min enclosing circle's size to ensure we get circular shapes.\n",
+    "\n",
+    "In implementation, since we don't know which kind of background the image is, we apply all the above 6 methods, and take the one with the most coins detected.\n",
+    "\n",
+    "## Feature Extraction\n",
+    "As described above, for each image containing multiple images, we end up with many subfigures of separate coins, each subfigure containing only one coin. They are supposed to be [x, y, 3] arrays. Each array is then fed to our classifier to identify the coin.\n",
+    "\n",
+    "## Classification\n",
+    "We train a model based the resnet pretrained model (on the image 1k dataset) in order to classify **single** coins.\n",
+    "\n",
+    "**NOTE:** The training pipeline is not contained in this notebook because it's not possible to upload the whole training data to Moodle. We will however provide the `training.ipynb` in a separate file for the sake of integrity. For the model in this notebook, we will load the model weights from our training pipeline directly.\n",
+    "\n",
+    "### Training Data Labeling\n",
+    "We used the labelImg package to label each coin and its position in the image. For each image, it ends up with a .xml file describing all the coins (class, position) in the image.\n",
+    "\n",
+    "### Pretrained Model\n",
+    "We used `model = models.resnet50(weights='IMAGENET1K_V2')` as the pretrained model.\n",
+    "\n",
+    "### Training\n",
+    "We split the labeled data into training set and validation set (size ratio = 9:1) and train 25 epochs. After each epoch, we calculate the CrossEntropyLoss on the validation set, and preserve the model with the least validation loss."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -15,46 +78,43 @@
     "from datetime import datetime\n",
     "import torchvision.models as models\n",
     "import json\n",
-    "import torch"
+    "import torch\n",
+    "import pandas as pd\n",
+    "import torchvision.transforms as transforms\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# wrap up \n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
+    "# thresholding + morphological operation + contour detection\n",
     "def rgb_thresh(img, type):\n",
-    "    # RGB阈值设定: neutral bg\n",
-    "    lower_bound = np.array([0, 0, 0])  # 设定最低阈值\n",
-    "    upper_bound = np.array([150, 175, 175])  # 设定最高阈值\n",
+    "    # neutral bg\n",
+    "    lower_bound = np.array([0, 0, 0]) \n",
+    "    upper_bound = np.array([150, 175, 175]) \n",
     "    if type == 'noisy':\n",
-    "        upper_bound = np.array([185, 180, 160])  # 设定最高阈值\n",
+    "        upper_bound = np.array([185, 180, 160]) \n",
     "    if type == 'hand':\n",
-    "        upper_bound = np.array([175, 175, 150])  # 设定最高阈值\n",
+    "        upper_bound = np.array([175, 175, 150]) \n",
     "    thresh = cv2.inRange(img, lower_bound, upper_bound)\n",
     "    return thresh\n",
     "\n",
     "def process_image(image_path, type='neutral', method='adaptive'):\n",
-    "    # 读取图片\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is None:\n",
     "        print(\"Error: Image not found.\")\n",
     "        return\n",
     "    \n",
-    "     # OpenCV读取为BGR格式，转换为RGB格式以适应matplotlib\n",
+    "    # convert to rgb to work with matplotlib\n",
     "    image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    if method == 'rgb':\n",
+    "        # apply rgb thresholding\n",
     "        thresh = rgb_thresh(image_rgb, type)\n",
-    "        # 应用闭运算\n",
+    "        # apply closing operation\n",
     "        if type == 'neutral':\n",
     "            kernel_1 = np.ones((25, 25), np.uint8)\n",
     "            kernel_2 = np.ones((30, 30), np.uint8)\n",
@@ -67,58 +127,46 @@
     "        closing = cv2.morphologyEx(thresh, cv2.MORPH_CLOSE, kernel_1)\n",
     "        closing = cv2.morphologyEx(closing, cv2.MORPH_CLOSE, kernel_2)\n",
     "        \n",
-    "        \n",
-    "    \n",
     "    elif method == 'adaptive':\n",
-    "        # applying gaussian blurring & adaptive threshold\n",
+    "        # applying gaussian blurring\n",
     "        gray_image = cv2.cvtColor(image_rgb, cv2.COLOR_RGB2GRAY)\n",
     "        gray_image = cv2.GaussianBlur(gray_image, (11, 11), 0)\n",
-    "        # 应用自适应阈值\n",
+    "        # applying adaptive thresholding\n",
     "        adaptive_thresh = cv2.adaptiveThreshold(gray_image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, \n",
     "                                                cv2.THRESH_BINARY_INV, 11, 2)\n",
-    "        # 替换之前的阈值图像\n",
     "        thresh = adaptive_thresh\n",
     "\n",
+    "        # apply closing operation\n",
     "        kernel_adaptive = np.ones((11, 11), np.uint8)\n",
     "        if type == 'hand':\n",
     "            kernel_adaptive = np.ones((20, 20), np.uint8)\n",
     "        elif type == 'noisy':\n",
     "            kernel_adaptive = np.ones((9, 9), np.uint8)\n",
-    "    \n",
-    "        # applied with adaptive thresh\n",
     "        closing = cv2.morphologyEx(thresh, cv2.MORPH_CLOSE, kernel_adaptive)\n",
     "        \n",
     "\n",
-    "    # 计算轮廓\n",
+    "    # calculate contours\n",
     "    contours, _ = cv2.findContours(closing, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    # 在原始图像上绘制轮廓\n",
-    "    contour_image = image.copy()\n",
-    "    cv2.drawContours(contour_image, contours, -1, (0, 255, 0), 3)\n",
-    "\n",
-    "    # plt.figure(figsize=(15, 10))\n",
-    "    # titles = ['Original Image', 'Threshold Image', 'Closing Image', 'Contour Image']\n",
-    "    # images = [image_rgb, thresh, closing, contour_image]\n",
     "\n",
     "    coin_images = []\n",
-    "    for i, contour in enumerate(contours):\n",
-    "        # 计算轮廓的面积和外接圆的面积\n",
+    "    for _, contour in enumerate(contours):\n",
+    "        # calculate the area of the contour and the area of the minimum enclosing circle\n",
     "        area = cv2.contourArea(contour)\n",
     "        (x, y), radius = cv2.minEnclosingCircle(contour)\n",
     "        circle_area = np.pi * (radius ** 2)\n",
-    "\n",
-    "        # 检查轮廓是否接近圆形\n",
-    "        if abs(1 - (area / circle_area)) < 0.2:  # 调整阈值以更精确地识别圆形\n",
+    "        # check if the contour is approximately circular\n",
+    "        if abs(1 - (area / circle_area)) < 0.2:  \n",
     "            x, y, w, h = cv2.boundingRect(contour)\n",
     "            coin_image = image_rgb[y:y+h, x:x+w]\n",
     "            coin_images.append(coin_image)\n",
     "\n",
-    "            # # 单独显示每个圆形硬币\n",
+    "            # # show the coin image, for debugging\n",
     "            # plt.figure()\n",
     "            # plt.imshow(coin_image)\n",
     "            # plt.title(f'Coin {len(coin_images)}')\n",
     "            # plt.xticks([]), plt.yticks([])\n",
     "\n",
-    "    # # plot threshold image, contour image\n",
+    "    # # plot threshold image, contour image, for debugging\n",
     "    # plt.figure(figsize=(12,8))\n",
     "    # for i in range(4):\n",
     "    #     plt.subplot(2, 3, i+1)\n",
@@ -133,53 +181,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# neutral bg\n",
-    "# adaptive works the best\n",
-    "image_path = os.path.join(\"data\", \"train\", \"L1010287.JPG\")\n",
-    "coins = process_image(image_path, type='neutral', method='adaptive')"
+    "# Load the model\n",
+    "\n",
+    "with open(os.path.join('model', 'label_to_index.json'), 'r') as f:\n",
+    "    label_to_index = json.load(f)\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = models.resnet50(weights='IMAGENET1K_V2')\n",
+    "num_classes = len(label_to_index)\n",
+    "model.fc = torch.nn.Linear(model.fc.in_features, num_classes)\n",
+    "model.load_state_dict(torch.load(os.path.join('model','best_model.pth')))\n",
+    "model = model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# noisy bg\n",
-    "# rgb works the best\n",
-    "image_path = os.path.join(\"data\", \"train\", \"L1010503.JPG\")\n",
-    "coins = process_image(image_path, type='noisy', method='rgb')"
+    "# The pred function\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "def predict_image(image_array, model=model, transform=transform, device=device):\n",
+    "    \n",
+    "    model.eval() \n",
+    "    image = Image.fromarray(np.uint8(image_array)).convert('RGB')\n",
+    "    image = transform(image)\n",
+    "    image = image.unsqueeze(0)\n",
+    "    image = image.to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        output = model(image)\n",
+    "        probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
+    "        top_prob, top_catid = torch.topk(probabilities, 1)\n",
+    "\n",
+    "    index_to_label = {v: k for k, v in label_to_index.items()}\n",
+    "\n",
+    "    return index_to_label[top_catid.item()], top_prob.item()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hand bg\n",
-    "image_path = os.path.join(\"data\", \"train\", \"L1010524.JPG\")\n",
-    "coins = process_image(image_path, type='hand', method='adaptive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24a1a253a30>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 1CHF, Probability: 0.9763496518135071\n"
+     ]
     },
     {
      "data": {
@@ -193,84 +253,17 @@
     }
    ],
    "source": [
-    "sample = coins[1]\n",
-    "plt.figure(figsize=(3, 3))\n",
-    "plt.imshow(sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Test the model\n",
+    "# Not needed for re-running\n",
     "\n",
-    "# 读取标签索引\n",
-    "with open(os.path.join('model', 'label_to_index.json'), 'r') as f:\n",
-    "    label_to_index = json.load(f)\n",
-    "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "model = models.resnet50(weights='IMAGENET1K_V2')\n",
-    "# 修改最后一个全连接层以匹配硬币分类的类别数\n",
-    "num_classes = len(label_to_index)\n",
-    "model.fc = torch.nn.Linear(model.fc.in_features, num_classes)\n",
-    "model.load_state_dict(torch.load(os.path.join('model','best_model.pth')))\n",
-    "model = model.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torchvision.transforms as transforms\n",
-    "from PIL import Image\n",
-    "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
-    "\n",
-    "def predict_image(image_array, model=model, transform=transform, device=device):\n",
-    "    \n",
-    "    model.eval()  # 设置模型为评估模式\n",
-    "    # image = Image.open(image_path).convert('RGB')\n",
-    "    image = Image.fromarray(np.uint8(image_array)).convert('RGB')\n",
-    "    image = transform(image)\n",
-    "    image = image.unsqueeze(0)  # 添加batch维度\n",
-    "    image = image.to(device)\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        output = model(image)\n",
-    "        probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
-    "        top_prob, top_catid = torch.topk(probabilities, 1)\n",
-    "\n",
-    "    # 反转label_to_index字典\n",
-    "    index_to_label = {v: k for k, v in label_to_index.items()}\n",
-    "\n",
-    "    return index_to_label[top_catid.item()], top_prob.item()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class: 1CHF, Probability: 0.9763496518135071\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 示例推理\n",
-    "predicted_class, probability = predict_image(sample, model, transform, device)\n",
-    "print(f\"Predicted class: {predicted_class}, Probability: {probability}\")"
+    "# image_path = os.path.join(\"data\", \"train\", \"L1010287.JPG\")\n",
+    "# coins = process_image(image_path, type='neutral', method='adaptive')\n",
+    "# sample = coins[1]\n",
+    "# plt.figure(figsize=(3, 3))\n",
+    "# plt.imshow(sample)\n",
+    "# # 示例推理\n",
+    "# predicted_class, probability = predict_image(sample, model, transform, device)\n",
+    "# print(f\"Predicted class: {predicted_class}, Probability: {probability}\")"
    ]
   },
   {
@@ -279,8 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scale up\n",
-    "import pandas as pd\n",
+    "# generate the test pred\n",
     "result = pd.DataFrame(columns=['id','5CHF','2CHF','1CHF','0.5CHF','0.2CHF','0.1CHF','0.05CHF','2EUR','1EUR','0.5EUR','0.2EUR','0.1EUR','0.05EUR','0.02EUR','0.01EUR','OOD'])\n",
     "\n",
     "types = ['neutral', 'noisy', 'hand']\n",
@@ -288,7 +280,6 @@
     "\n",
     "for jpg_file in os.listdir('data/test'):\n",
     "    image_path = os.path.join('data', 'test', jpg_file)\n",
-    "    # coins = process_image(image_path, type='neutral', method='adaptive')\n",
     "    pred_coins = []\n",
     "    most_coins = 0\n",
     "    for type in types:\n",
@@ -298,14 +289,8 @@
     "                pred_coins = coins\n",
     "                most_coins = len(coins)\n",
     "    \n",
-    "    # add a new row\n",
-    "    # 指定的id名称\n",
     "    new_id = jpg_file.split('.')[0]\n",
-    "\n",
-    "    # 直接使用loc添加新行，设置id并将其余列设置为0\n",
     "    result.loc[len(result)] = [new_id] + [0] * (len(result.columns) - 1)\n",
-    "    \n",
-    "    \n",
     "    \n",
     "    for coin in pred_coins:\n",
     "        predicted_class, probability = predict_image(coin, model, transform, device)\n",
