--- a/train.ipynb
+++ b/train.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Author:**\n",
+    "\n",
+    "Haolong Li (haolong.li@epfl.ch) (352680)\n",
+    "\n",
+    "Zhibo Zhao (zhibo.zhao@epfl.ch) (350593)\n",
+    "\n",
+    "**NOTE:** It is NOT expected to run this notebook, because the training data is too big to upload. We upload this notebook just in case of integrity.\n",
+    "\n",
+    "The result of the training (model weights) is stored in `model/best_model.pth`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,17 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training for the classification model\n",
-    "# 加载预训练的 ResNet50 模型\n",
-    "resnet50 = models.resnet50(weights='IMAGENET1K_V2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def parse_xml(xml_file):\n",
     "    tree = ET.parse(xml_file)\n",
     "    root = tree.getroot()\n",
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +66,7 @@
        " ('0.2EUR', (1868, 2963, 2505, 3532))]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2EUR': 0, '0.1EUR': 1, '0.2CHF': 2, 'OOD': 3, '0.2EUR': 4, '0.05CHF': 5, '0.1CHF': 6, '0.5CHF': 7, '1CHF': 8, '5CHF': 9, '2CHF': 10, '1EUR': 11, '0.01EUR': 12, '0.05EUR': 13, '0.5EUR': 14, '0.02EUR': 15}\n"
+      "{'0.05EUR': 0, '1EUR': 1, '5CHF': 2, '0.02EUR': 3, '1CHF': 4, '0.01EUR': 5, '2CHF': 6, '0.2CHF': 7, '0.05CHF': 8, '0.5CHF': 9, '0.5EUR': 10, '2EUR': 11, '0.1EUR': 12, '0.1CHF': 13, 'OOD': 14, '0.2EUR': 15}\n"
      ]
     }
    ],
@@ -99,11 +103,9 @@
     "                labels.add(member.find('name').text)\n",
     "    return labels\n",
     "\n",
-    "# 创建标签到索引的映射\n",
     "label_set = collect_labels(os.path.join('data', 'train'))\n",
     "label_to_index = {label: idx for idx, label in enumerate(label_set)}\n",
     "\n",
-    "# 示例：显示映射\n",
     "print(label_to_index)\n"
    ]
   },
