--- a/train.ipynb
+++ b/train.ipynb
@@ -27,7 +27,11 @@
     "import xml.etree.ElementTree as ET\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torchvision.transforms as transforms\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import torchvision.models as models\n",
+    "from torch.utils.data import Subset"
    ]
   },
   {
@@ -180,8 +184,7 @@
     "    return images, labels\n",
     "\n",
     "\n",
-    "import numpy as np\n",
-    "from torch.utils.data import Subset\n",
+    "\n",
     "def train_val_split(dataset, val_split=0.2):\n",
     "    indices = np.arange(len(dataset))\n",
     "    np.random.shuffle(indices)\n",
@@ -226,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torchvision.models as models\n",
+    "\n",
     "\n",
     "# 加载预训练的 ResNet50 模型\n",
     "model = models.resnet50(weights='IMAGENET1K_V2')\n",
@@ -381,7 +384,7 @@
    "outputs": [],
    "source": [
     "# save the label to index mapping\n",
-    "import json\n",
+    "\n",
     "with open('label_to_index.json', 'w') as f:\n",
     "    json.dump(label_to_index, f)"
    ]
