add more instruvctions

--- a/train.ipynb
+++ b/train.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "**NOTE:** It is NOT expected to run this notebook, because the training data is too big to upload. We upload this notebook just in case of integrity.\n",
     "\n",
+    "**Refer to `classify.ipynb` for the kaggle-solution reproduce pipeline.**\n",
+    "\n",
     "The result of the training (model weights) is stored in `model/best_model.pth`."
    ]
   },
